aguda-compiler/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declaration declarations_tail
Rule 3     declarations_tail -> declaration declarations_tail
Rule 4     declarations_tail -> empty
Rule 5     declaration -> variable_declaration
Rule 6     declaration -> function_declaration
Rule 7     function_declaration -> LET ID LPAREN parameters RPAREN COLON function_type ASSIGN exp
Rule 8     parameters -> variable parameters_tail
Rule 9     parameters_tail -> COMMA variable parameters_tail
Rule 10    parameters_tail -> empty
Rule 11    type -> base_type
Rule 12    type -> array_type
Rule 13    base_type -> INT_TYPE
Rule 14    base_type -> STRING_TYPE
Rule 15    base_type -> UNIT_TYPE
Rule 16    base_type -> BOOL_TYPE
Rule 17    array_type -> type LBRACKET RBRACKET
Rule 18    function_type -> type ARROW type
Rule 19    function_type -> LPAREN type function_type_tail RPAREN ARROW type
Rule 20    function_type_tail -> COMMA type function_type_tail
Rule 21    function_type_tail -> empty
Rule 22    exp -> variable
Rule 23    exp -> literal
Rule 24    exp -> binary_exp
Rule 25    exp -> unary_exp
Rule 26    exp -> function_call
Rule 27    exp -> assignment
Rule 28    exp -> variable_declaration
Rule 29    exp -> if_then_else
Rule 30    exp -> if_then
Rule 31    exp -> while_loop
Rule 32    exp -> array_creation
Rule 33    exp -> array_access
Rule 34    exp -> group
Rule 35    variable -> ID
Rule 36    variable -> UNDERSCORE
Rule 37    literal -> INT_LITERAL
Rule 38    literal -> TRUE
Rule 39    literal -> FALSE
Rule 40    literal -> NULL
Rule 41    literal -> UNIT_LITERAL
Rule 42    literal -> STRING_LITERAL
Rule 43    binary_exp -> exp PLUS exp
Rule 44    binary_exp -> exp MINUS exp
Rule 45    binary_exp -> exp TIMES exp
Rule 46    binary_exp -> exp DIVIDE exp
Rule 47    binary_exp -> exp MOD exp
Rule 48    binary_exp -> exp POWER exp
Rule 49    binary_exp -> exp EQUALS exp
Rule 50    binary_exp -> exp NOT_EQUALS exp
Rule 51    binary_exp -> exp LESS exp
Rule 52    binary_exp -> exp LESS_EQUAL exp
Rule 53    binary_exp -> exp GREATER exp
Rule 54    binary_exp -> exp GREATER_EQUAL exp
Rule 55    binary_exp -> exp AND exp
Rule 56    binary_exp -> exp OR exp
Rule 57    binary_exp -> exp SEMICOLON exp
Rule 58    unary_exp -> MINUS exp
Rule 59    unary_exp -> NOT exp
Rule 60    function_call -> variable LPAREN arguments RPAREN
Rule 61    arguments -> exp arguments_tail
Rule 62    arguments_tail -> COMMA exp arguments_tail
Rule 63    arguments_tail -> empty
Rule 64    assignment -> SET lhs ASSIGN exp
Rule 65    lhs -> variable
Rule 66    lhs -> array_access
Rule 67    array_access -> lhs LBRACKET exp RBRACKET
Rule 68    variable_declaration -> LET variable COLON type ASSIGN exp
Rule 69    if_then_else -> IF exp THEN exp ELSE exp
Rule 70    if_then -> IF exp THEN exp
Rule 71    while_loop -> WHILE exp DO exp
Rule 72    array_creation -> NEW type LBRACKET exp BAR exp RBRACKET
Rule 73    group -> LPAREN exp RPAREN
Rule 74    empty -> <empty>

Terminals, with rules where they appear

AND                  : 55
ARROW                : 18 19
ASSIGN               : 7 64 68
BAR                  : 72
BOOL_TYPE            : 16
COLON                : 7 68
COMMA                : 9 20 62
DIVIDE               : 46
DO                   : 71
ELSE                 : 69
EQUALS               : 49
FALSE                : 39
GREATER              : 53
GREATER_EQUAL        : 54
ID                   : 7 35
IF                   : 69 70
INT_LITERAL          : 37
INT_TYPE             : 13
LBRACKET             : 17 67 72
LESS                 : 51
LESS_EQUAL           : 52
LET                  : 7 68
LPAREN               : 7 19 60 73
MINUS                : 44 58
MOD                  : 47
NEW                  : 72
NOT                  : 59
NOT_EQUALS           : 50
NULL                 : 40
OR                   : 56
PLUS                 : 43
POWER                : 48
RBRACKET             : 17 67 72
RPAREN               : 7 19 60 73
SEMICOLON            : 57
SET                  : 64
STRING_LITERAL       : 42
STRING_TYPE          : 14
THEN                 : 69 70
TIMES                : 45
TRUE                 : 38
UNDERSCORE           : 36
UNIT_LITERAL         : 41
UNIT_TYPE            : 15
WHILE                : 71
error                : 

Nonterminals, with rules where they appear

arguments            : 60
arguments_tail       : 61 62
array_access         : 33 66
array_creation       : 32
array_type           : 12
assignment           : 27
base_type            : 11
binary_exp           : 24
declaration          : 2 3
declarations         : 1
declarations_tail    : 2 3
empty                : 4 10 21 63
exp                  : 7 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 59 61 62 64 67 68 69 69 69 70 70 71 71 72 72 73
function_call        : 26
function_declaration : 6
function_type        : 7
function_type_tail   : 19 20
group                : 34
if_then              : 30
if_then_else         : 29
lhs                  : 64 67
literal              : 23
parameters           : 7
parameters_tail      : 8 9
program              : 0
type                 : 17 18 18 19 19 20 68 72
unary_exp            : 25
variable             : 8 9 22 60 65 68
variable_declaration : 5 28
while_loop           : 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declaration declarations_tail
    (5) declaration -> . variable_declaration
    (6) declaration -> . function_declaration
    (68) variable_declaration -> . LET variable COLON type ASSIGN exp
    (7) function_declaration -> . LET ID LPAREN parameters RPAREN COLON function_type ASSIGN exp

    LET             shift and go to state 6

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    declaration                    shift and go to state 3
    variable_declaration           shift and go to state 4
    function_declaration           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations .

    $end            reduce using rule 1 (program -> declarations .)


state 3

    (2) declarations -> declaration . declarations_tail
    (3) declarations_tail -> . declaration declarations_tail
    (4) declarations_tail -> . empty
    (5) declaration -> . variable_declaration
    (6) declaration -> . function_declaration
    (74) empty -> .
    (68) variable_declaration -> . LET variable COLON type ASSIGN exp
    (7) function_declaration -> . LET ID LPAREN parameters RPAREN COLON function_type ASSIGN exp

    $end            reduce using rule 74 (empty -> .)
    LET             shift and go to state 6

    declaration                    shift and go to state 7
    declarations_tail              shift and go to state 8
    empty                          shift and go to state 9
    variable_declaration           shift and go to state 4
    function_declaration           shift and go to state 5

state 4

    (5) declaration -> variable_declaration .

    LET             reduce using rule 5 (declaration -> variable_declaration .)
    $end            reduce using rule 5 (declaration -> variable_declaration .)


state 5

    (6) declaration -> function_declaration .

    LET             reduce using rule 6 (declaration -> function_declaration .)
    $end            reduce using rule 6 (declaration -> function_declaration .)


state 6

    (68) variable_declaration -> LET . variable COLON type ASSIGN exp
    (7) function_declaration -> LET . ID LPAREN parameters RPAREN COLON function_type ASSIGN exp
    (35) variable -> . ID
    (36) variable -> . UNDERSCORE

    ID              shift and go to state 11
    UNDERSCORE      shift and go to state 12

    variable                       shift and go to state 10

state 7

    (3) declarations_tail -> declaration . declarations_tail
    (3) declarations_tail -> . declaration declarations_tail
    (4) declarations_tail -> . empty
    (5) declaration -> . variable_declaration
    (6) declaration -> . function_declaration
    (74) empty -> .
    (68) variable_declaration -> . LET variable COLON type ASSIGN exp
    (7) function_declaration -> . LET ID LPAREN parameters RPAREN COLON function_type ASSIGN exp

    $end            reduce using rule 74 (empty -> .)
    LET             shift and go to state 6

    declaration                    shift and go to state 7
    declarations_tail              shift and go to state 13
    empty                          shift and go to state 9
    variable_declaration           shift and go to state 4
    function_declaration           shift and go to state 5

state 8

    (2) declarations -> declaration declarations_tail .

    $end            reduce using rule 2 (declarations -> declaration declarations_tail .)


state 9

    (4) declarations_tail -> empty .

    $end            reduce using rule 4 (declarations_tail -> empty .)


state 10

    (68) variable_declaration -> LET variable . COLON type ASSIGN exp

    COLON           shift and go to state 14


state 11

    (7) function_declaration -> LET ID . LPAREN parameters RPAREN COLON function_type ASSIGN exp
    (35) variable -> ID .

    LPAREN          shift and go to state 15
    COLON           reduce using rule 35 (variable -> ID .)


state 12

    (36) variable -> UNDERSCORE .

    COLON           reduce using rule 36 (variable -> UNDERSCORE .)
    COMMA           reduce using rule 36 (variable -> UNDERSCORE .)
    RPAREN          reduce using rule 36 (variable -> UNDERSCORE .)
    LPAREN          reduce using rule 36 (variable -> UNDERSCORE .)
    PLUS            reduce using rule 36 (variable -> UNDERSCORE .)
    MINUS           reduce using rule 36 (variable -> UNDERSCORE .)
    TIMES           reduce using rule 36 (variable -> UNDERSCORE .)
    DIVIDE          reduce using rule 36 (variable -> UNDERSCORE .)
    MOD             reduce using rule 36 (variable -> UNDERSCORE .)
    POWER           reduce using rule 36 (variable -> UNDERSCORE .)
    EQUALS          reduce using rule 36 (variable -> UNDERSCORE .)
    NOT_EQUALS      reduce using rule 36 (variable -> UNDERSCORE .)
    LESS            reduce using rule 36 (variable -> UNDERSCORE .)
    LESS_EQUAL      reduce using rule 36 (variable -> UNDERSCORE .)
    GREATER         reduce using rule 36 (variable -> UNDERSCORE .)
    GREATER_EQUAL   reduce using rule 36 (variable -> UNDERSCORE .)
    AND             reduce using rule 36 (variable -> UNDERSCORE .)
    OR              reduce using rule 36 (variable -> UNDERSCORE .)
    SEMICOLON       reduce using rule 36 (variable -> UNDERSCORE .)
    LET             reduce using rule 36 (variable -> UNDERSCORE .)
    $end            reduce using rule 36 (variable -> UNDERSCORE .)
    THEN            reduce using rule 36 (variable -> UNDERSCORE .)
    DO              reduce using rule 36 (variable -> UNDERSCORE .)
    RBRACKET        reduce using rule 36 (variable -> UNDERSCORE .)
    ELSE            reduce using rule 36 (variable -> UNDERSCORE .)
    BAR             reduce using rule 36 (variable -> UNDERSCORE .)
    LBRACKET        reduce using rule 36 (variable -> UNDERSCORE .)
    ASSIGN          reduce using rule 36 (variable -> UNDERSCORE .)


state 13

    (3) declarations_tail -> declaration declarations_tail .

    $end            reduce using rule 3 (declarations_tail -> declaration declarations_tail .)


state 14

    (68) variable_declaration -> LET variable COLON . type ASSIGN exp
    (11) type -> . base_type
    (12) type -> . array_type
    (13) base_type -> . INT_TYPE
    (14) base_type -> . STRING_TYPE
    (15) base_type -> . UNIT_TYPE
    (16) base_type -> . BOOL_TYPE
    (17) array_type -> . type LBRACKET RBRACKET

    INT_TYPE        shift and go to state 19
    STRING_TYPE     shift and go to state 20
    UNIT_TYPE       shift and go to state 21
    BOOL_TYPE       shift and go to state 22

    type                           shift and go to state 16
    base_type                      shift and go to state 17
    array_type                     shift and go to state 18

state 15

    (7) function_declaration -> LET ID LPAREN . parameters RPAREN COLON function_type ASSIGN exp
    (8) parameters -> . variable parameters_tail
    (35) variable -> . ID
    (36) variable -> . UNDERSCORE

    ID              shift and go to state 23
    UNDERSCORE      shift and go to state 12

    parameters                     shift and go to state 24
    variable                       shift and go to state 25

state 16

    (68) variable_declaration -> LET variable COLON type . ASSIGN exp
    (17) array_type -> type . LBRACKET RBRACKET

    ASSIGN          shift and go to state 26
    LBRACKET        shift and go to state 27


state 17

    (11) type -> base_type .

    ASSIGN          reduce using rule 11 (type -> base_type .)
    LBRACKET        reduce using rule 11 (type -> base_type .)
    ARROW           reduce using rule 11 (type -> base_type .)
    COMMA           reduce using rule 11 (type -> base_type .)
    RPAREN          reduce using rule 11 (type -> base_type .)


state 18

    (12) type -> array_type .

    ASSIGN          reduce using rule 12 (type -> array_type .)
    LBRACKET        reduce using rule 12 (type -> array_type .)
    ARROW           reduce using rule 12 (type -> array_type .)
    COMMA           reduce using rule 12 (type -> array_type .)
    RPAREN          reduce using rule 12 (type -> array_type .)


state 19

    (13) base_type -> INT_TYPE .

    ASSIGN          reduce using rule 13 (base_type -> INT_TYPE .)
    LBRACKET        reduce using rule 13 (base_type -> INT_TYPE .)
    ARROW           reduce using rule 13 (base_type -> INT_TYPE .)
    COMMA           reduce using rule 13 (base_type -> INT_TYPE .)
    RPAREN          reduce using rule 13 (base_type -> INT_TYPE .)


state 20

    (14) base_type -> STRING_TYPE .

    ASSIGN          reduce using rule 14 (base_type -> STRING_TYPE .)
    LBRACKET        reduce using rule 14 (base_type -> STRING_TYPE .)
    ARROW           reduce using rule 14 (base_type -> STRING_TYPE .)
    COMMA           reduce using rule 14 (base_type -> STRING_TYPE .)
    RPAREN          reduce using rule 14 (base_type -> STRING_TYPE .)


state 21

    (15) base_type -> UNIT_TYPE .

    ASSIGN          reduce using rule 15 (base_type -> UNIT_TYPE .)
    LBRACKET        reduce using rule 15 (base_type -> UNIT_TYPE .)
    ARROW           reduce using rule 15 (base_type -> UNIT_TYPE .)
    COMMA           reduce using rule 15 (base_type -> UNIT_TYPE .)
    RPAREN          reduce using rule 15 (base_type -> UNIT_TYPE .)


state 22

    (16) base_type -> BOOL_TYPE .

    ASSIGN          reduce using rule 16 (base_type -> BOOL_TYPE .)
    LBRACKET        reduce using rule 16 (base_type -> BOOL_TYPE .)
    ARROW           reduce using rule 16 (base_type -> BOOL_TYPE .)
    COMMA           reduce using rule 16 (base_type -> BOOL_TYPE .)
    RPAREN          reduce using rule 16 (base_type -> BOOL_TYPE .)


state 23

    (35) variable -> ID .

    COMMA           reduce using rule 35 (variable -> ID .)
    RPAREN          reduce using rule 35 (variable -> ID .)
    LPAREN          reduce using rule 35 (variable -> ID .)
    PLUS            reduce using rule 35 (variable -> ID .)
    MINUS           reduce using rule 35 (variable -> ID .)
    TIMES           reduce using rule 35 (variable -> ID .)
    DIVIDE          reduce using rule 35 (variable -> ID .)
    MOD             reduce using rule 35 (variable -> ID .)
    POWER           reduce using rule 35 (variable -> ID .)
    EQUALS          reduce using rule 35 (variable -> ID .)
    NOT_EQUALS      reduce using rule 35 (variable -> ID .)
    LESS            reduce using rule 35 (variable -> ID .)
    LESS_EQUAL      reduce using rule 35 (variable -> ID .)
    GREATER         reduce using rule 35 (variable -> ID .)
    GREATER_EQUAL   reduce using rule 35 (variable -> ID .)
    AND             reduce using rule 35 (variable -> ID .)
    OR              reduce using rule 35 (variable -> ID .)
    SEMICOLON       reduce using rule 35 (variable -> ID .)
    LET             reduce using rule 35 (variable -> ID .)
    $end            reduce using rule 35 (variable -> ID .)
    THEN            reduce using rule 35 (variable -> ID .)
    DO              reduce using rule 35 (variable -> ID .)
    RBRACKET        reduce using rule 35 (variable -> ID .)
    ELSE            reduce using rule 35 (variable -> ID .)
    BAR             reduce using rule 35 (variable -> ID .)
    LBRACKET        reduce using rule 35 (variable -> ID .)
    COLON           reduce using rule 35 (variable -> ID .)
    ASSIGN          reduce using rule 35 (variable -> ID .)


state 24

    (7) function_declaration -> LET ID LPAREN parameters . RPAREN COLON function_type ASSIGN exp

    RPAREN          shift and go to state 28


state 25

    (8) parameters -> variable . parameters_tail
    (9) parameters_tail -> . COMMA variable parameters_tail
    (10) parameters_tail -> . empty
    (74) empty -> .

    COMMA           shift and go to state 30
    RPAREN          reduce using rule 74 (empty -> .)

    parameters_tail                shift and go to state 29
    empty                          shift and go to state 31

state 26

    (68) variable_declaration -> LET variable COLON type ASSIGN . exp
    (22) exp -> . variable
    (23) exp -> . literal
    (24) exp -> . binary_exp
    (25) exp -> . unary_exp
    (26) exp -> . function_call
    (27) exp -> . assignment
    (28) exp -> . variable_declaration
    (29) exp -> . if_then_else
    (30) exp -> . if_then
    (31) exp -> . while_loop
    (32) exp -> . array_creation
    (33) exp -> . array_access
    (34) exp -> . group
    (35) variable -> . ID
    (36) variable -> . UNDERSCORE
    (37) literal -> . INT_LITERAL
    (38) literal -> . TRUE
    (39) literal -> . FALSE
    (40) literal -> . NULL
    (41) literal -> . UNIT_LITERAL
    (42) literal -> . STRING_LITERAL
    (43) binary_exp -> . exp PLUS exp
    (44) binary_exp -> . exp MINUS exp
    (45) binary_exp -> . exp TIMES exp
    (46) binary_exp -> . exp DIVIDE exp
    (47) binary_exp -> . exp MOD exp
    (48) binary_exp -> . exp POWER exp
    (49) binary_exp -> . exp EQUALS exp
    (50) binary_exp -> . exp NOT_EQUALS exp
    (51) binary_exp -> . exp LESS exp
    (52) binary_exp -> . exp LESS_EQUAL exp
    (53) binary_exp -> . exp GREATER exp
    (54) binary_exp -> . exp GREATER_EQUAL exp
    (55) binary_exp -> . exp AND exp
    (56) binary_exp -> . exp OR exp
    (57) binary_exp -> . exp SEMICOLON exp
    (58) unary_exp -> . MINUS exp
    (59) unary_exp -> . NOT exp
    (60) function_call -> . variable LPAREN arguments RPAREN
    (64) assignment -> . SET lhs ASSIGN exp
    (68) variable_declaration -> . LET variable COLON type ASSIGN exp
    (69) if_then_else -> . IF exp THEN exp ELSE exp
    (70) if_then -> . IF exp THEN exp
    (71) while_loop -> . WHILE exp DO exp
    (72) array_creation -> . NEW type LBRACKET exp BAR exp RBRACKET
    (67) array_access -> . lhs LBRACKET exp RBRACKET
    (73) group -> . LPAREN exp RPAREN
    (65) lhs -> . variable
    (66) lhs -> . array_access

    ID              shift and go to state 23
    UNDERSCORE      shift and go to state 12
    INT_LITERAL     shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    UNIT_LITERAL    shift and go to state 51
    STRING_LITERAL  shift and go to state 52
    MINUS           shift and go to state 53
    NOT             shift and go to state 54
    SET             shift and go to state 56
    LET             shift and go to state 32
    IF              shift and go to state 58
    WHILE           shift and go to state 59
    NEW             shift and go to state 60
    LPAREN          shift and go to state 55

    variable                       shift and go to state 33
    exp                            shift and go to state 34
    literal                        shift and go to state 35
    binary_exp                     shift and go to state 36
    unary_exp                      shift and go to state 37
    function_call                  shift and go to state 38
    assignment                     shift and go to state 39
    variable_declaration           shift and go to state 40
    if_then_else                   shift and go to state 41
    if_then                        shift and go to state 42
    while_loop                     shift and go to state 43
    array_creation                 shift and go to state 44
    array_access                   shift and go to state 45
    group                          shift and go to state 46
    lhs                            shift and go to state 57

state 27

    (17) array_type -> type LBRACKET . RBRACKET

    RBRACKET        shift and go to state 61


state 28

    (7) function_declaration -> LET ID LPAREN parameters RPAREN . COLON function_type ASSIGN exp

    COLON           shift and go to state 62


state 29

    (8) parameters -> variable parameters_tail .

    RPAREN          reduce using rule 8 (parameters -> variable parameters_tail .)


state 30

    (9) parameters_tail -> COMMA . variable parameters_tail
    (35) variable -> . ID
    (36) variable -> . UNDERSCORE

    ID              shift and go to state 23
    UNDERSCORE      shift and go to state 12

    variable                       shift and go to state 63

state 31

    (10) parameters_tail -> empty .

    RPAREN          reduce using rule 10 (parameters_tail -> empty .)


state 32

    (68) variable_declaration -> LET . variable COLON type ASSIGN exp
    (35) variable -> . ID
    (36) variable -> . UNDERSCORE

    ID              shift and go to state 23
    UNDERSCORE      shift and go to state 12

    variable                       shift and go to state 10

state 33

    (22) exp -> variable .
    (60) function_call -> variable . LPAREN arguments RPAREN
    (65) lhs -> variable .

    PLUS            reduce using rule 22 (exp -> variable .)
    MINUS           reduce using rule 22 (exp -> variable .)
    TIMES           reduce using rule 22 (exp -> variable .)
    DIVIDE          reduce using rule 22 (exp -> variable .)
    MOD             reduce using rule 22 (exp -> variable .)
    POWER           reduce using rule 22 (exp -> variable .)
    EQUALS          reduce using rule 22 (exp -> variable .)
    NOT_EQUALS      reduce using rule 22 (exp -> variable .)
    LESS            reduce using rule 22 (exp -> variable .)
    LESS_EQUAL      reduce using rule 22 (exp -> variable .)
    GREATER         reduce using rule 22 (exp -> variable .)
    GREATER_EQUAL   reduce using rule 22 (exp -> variable .)
    AND             reduce using rule 22 (exp -> variable .)
    OR              reduce using rule 22 (exp -> variable .)
    SEMICOLON       reduce using rule 22 (exp -> variable .)
    LET             reduce using rule 22 (exp -> variable .)
    $end            reduce using rule 22 (exp -> variable .)
    RPAREN          reduce using rule 22 (exp -> variable .)
    THEN            reduce using rule 22 (exp -> variable .)
    DO              reduce using rule 22 (exp -> variable .)
    COMMA           reduce using rule 22 (exp -> variable .)
    RBRACKET        reduce using rule 22 (exp -> variable .)
    ELSE            reduce using rule 22 (exp -> variable .)
    BAR             reduce using rule 22 (exp -> variable .)
    LPAREN          shift and go to state 64
    LBRACKET        reduce using rule 65 (lhs -> variable .)


state 34

    (68) variable_declaration -> LET variable COLON type ASSIGN exp .
    (43) binary_exp -> exp . PLUS exp
    (44) binary_exp -> exp . MINUS exp
    (45) binary_exp -> exp . TIMES exp
    (46) binary_exp -> exp . DIVIDE exp
    (47) binary_exp -> exp . MOD exp
    (48) binary_exp -> exp . POWER exp
    (49) binary_exp -> exp . EQUALS exp
    (50) binary_exp -> exp . NOT_EQUALS exp
    (51) binary_exp -> exp . LESS exp
    (52) binary_exp -> exp . LESS_EQUAL exp
    (53) binary_exp -> exp . GREATER exp
    (54) binary_exp -> exp . GREATER_EQUAL exp
    (55) binary_exp -> exp . AND exp
    (56) binary_exp -> exp . OR exp
    (57) binary_exp -> exp . SEMICOLON exp

    LET             reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    $end            reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    RPAREN          reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    THEN            reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    DO              reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    COMMA           reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    RBRACKET        reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    ELSE            reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    BAR             reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .)
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66
    TIMES           shift and go to state 67
    DIVIDE          shift and go to state 68
    MOD             shift and go to state 69
    POWER           shift and go to state 70
    EQUALS          shift and go to state 71
    NOT_EQUALS      shift and go to state 72
    LESS            shift and go to state 73
    LESS_EQUAL      shift and go to state 74
    GREATER         shift and go to state 75
    GREATER_EQUAL   shift and go to state 76
    AND             shift and go to state 77
    OR              shift and go to state 78
    SEMICOLON       shift and go to state 79

  ! PLUS            [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! MINUS           [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! TIMES           [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! DIVIDE          [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! MOD             [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! POWER           [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! EQUALS          [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! NOT_EQUALS      [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! LESS            [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! LESS_EQUAL      [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! GREATER         [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! GREATER_EQUAL   [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! AND             [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! OR              [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]
  ! SEMICOLON       [ reduce using rule 68 (variable_declaration -> LET variable COLON type ASSIGN exp .) ]


state 35

    (23) exp -> literal .

    PLUS            reduce using rule 23 (exp -> literal .)
    MINUS           reduce using rule 23 (exp -> literal .)
    TIMES           reduce using rule 23 (exp -> literal .)
    DIVIDE          reduce using rule 23 (exp -> literal .)
    MOD             reduce using rule 23 (exp -> literal .)
    POWER           reduce using rule 23 (exp -> literal .)
    EQUALS          reduce using rule 23 (exp -> literal .)
    NOT_EQUALS      reduce using rule 23 (exp -> literal .)
    LESS            reduce using rule 23 (exp -> literal .)
    LESS_EQUAL      reduce using rule 23 (exp -> literal .)
    GREATER         reduce using rule 23 (exp -> literal .)
    GREATER_EQUAL   reduce using rule 23 (exp -> literal .)
    AND             reduce using rule 23 (exp -> literal .)
    OR              reduce using rule 23 (exp -> literal .)
    SEMICOLON       reduce using rule 23 (exp -> literal .)
    LET             reduce using rule 23 (exp -> literal .)
    $end            reduce using rule 23 (exp -> literal .)
    RPAREN          reduce using rule 23 (exp -> literal .)
    THEN            reduce using rule 23 (exp -> literal .)
    DO              reduce using rule 23 (exp -> literal .)
    COMMA           reduce using rule 23 (exp -> literal .)
    RBRACKET        reduce using rule 23 (exp -> literal .)
    ELSE            reduce using rule 23 (exp -> literal .)
    BAR             reduce using rule 23 (exp -> literal .)


state 36

    (24) exp -> binary_exp .

    PLUS            reduce using rule 24 (exp -> binary_exp .)
    MINUS           reduce using rule 24 (exp -> binary_exp .)
    TIMES           reduce using rule 24 (exp -> binary_exp .)
    DIVIDE          reduce using rule 24 (exp -> binary_exp .)
    MOD             reduce using rule 24 (exp -> binary_exp .)
    POWER           reduce using rule 24 (exp -> binary_exp .)
    EQUALS          reduce using rule 24 (exp -> binary_exp .)
    NOT_EQUALS      reduce using rule 24 (exp -> binary_exp .)
    LESS            reduce using rule 24 (exp -> binary_exp .)
    LESS_EQUAL      reduce using rule 24 (exp -> binary_exp .)
    GREATER         reduce using rule 24 (exp -> binary_exp .)
    GREATER_EQUAL   reduce using rule 24 (exp -> binary_exp .)
    AND             reduce using rule 24 (exp -> binary_exp .)
    OR              reduce using rule 24 (exp -> binary_exp .)
    SEMICOLON       reduce using rule 24 (exp -> binary_exp .)
    LET             reduce using rule 24 (exp -> binary_exp .)
    $end            reduce using rule 24 (exp -> binary_exp .)
    RPAREN          reduce using rule 24 (exp -> binary_exp .)
    THEN            reduce using rule 24 (exp -> binary_exp .)
    DO              reduce using rule 24 (exp -> binary_exp .)
    COMMA           reduce using rule 24 (exp -> binary_exp .)
    RBRACKET        reduce using rule 24 (exp -> binary_exp .)
    ELSE            reduce using rule 24 (exp -> binary_exp .)
    BAR             reduce using rule 24 (exp -> binary_exp .)


state 37

    (25) exp -> unary_exp .

    PLUS            reduce using rule 25 (exp -> unary_exp .)
    MINUS           reduce using rule 25 (exp -> unary_exp .)
    TIMES           reduce using rule 25 (exp -> unary_exp .)
    DIVIDE          reduce using rule 25 (exp -> unary_exp .)
    MOD             reduce using rule 25 (exp -> unary_exp .)
    POWER           reduce using rule 25 (exp -> unary_exp .)
    EQUALS          reduce using rule 25 (exp -> unary_exp .)
    NOT_EQUALS      reduce using rule 25 (exp -> unary_exp .)
    LESS            reduce using rule 25 (exp -> unary_exp .)
    LESS_EQUAL      reduce using rule 25 (exp -> unary_exp .)
    GREATER         reduce using rule 25 (exp -> unary_exp .)
    GREATER_EQUAL   reduce using rule 25 (exp -> unary_exp .)
    AND             reduce using rule 25 (exp -> unary_exp .)
    OR              reduce using rule 25 (exp -> unary_exp .)
    SEMICOLON       reduce using rule 25 (exp -> unary_exp .)
    LET             reduce using rule 25 (exp -> unary_exp .)
    $end            reduce using rule 25 (exp -> unary_exp .)
    RPAREN          reduce using rule 25 (exp -> unary_exp .)
    THEN            reduce using rule 25 (exp -> unary_exp .)
    DO              reduce using rule 25 (exp -> unary_exp .)
    COMMA           reduce using rule 25 (exp -> unary_exp .)
    RBRACKET        reduce using rule 25 (exp -> unary_exp .)
    ELSE            reduce using rule 25 (exp -> unary_exp .)
    BAR             reduce using rule 25 (exp -> unary_exp .)


state 38

    (26) exp -> function_call .

    PLUS            reduce using rule 26 (exp -> function_call .)
    MINUS           reduce using rule 26 (exp -> function_call .)
    TIMES           reduce using rule 26 (exp -> function_call .)
    DIVIDE          reduce using rule 26 (exp -> function_call .)
    MOD             reduce using rule 26 (exp -> function_call .)
    POWER           reduce using rule 26 (exp -> function_call .)
    EQUALS          reduce using rule 26 (exp -> function_call .)
    NOT_EQUALS      reduce using rule 26 (exp -> function_call .)
    LESS            reduce using rule 26 (exp -> function_call .)
    LESS_EQUAL      reduce using rule 26 (exp -> function_call .)
    GREATER         reduce using rule 26 (exp -> function_call .)
    GREATER_EQUAL   reduce using rule 26 (exp -> function_call .)
    AND             reduce using rule 26 (exp -> function_call .)
    OR              reduce using rule 26 (exp -> function_call .)
    SEMICOLON       reduce using rule 26 (exp -> function_call .)
    LET             reduce using rule 26 (exp -> function_call .)
    $end            reduce using rule 26 (exp -> function_call .)
    RPAREN          reduce using rule 26 (exp -> function_call .)
    THEN            reduce using rule 26 (exp -> function_call .)
    DO              reduce using rule 26 (exp -> function_call .)
    COMMA           reduce using rule 26 (exp -> function_call .)
    RBRACKET        reduce using rule 26 (exp -> function_call .)
    ELSE            reduce using rule 26 (exp -> function_call .)
    BAR             reduce using rule 26 (exp -> function_call .)


state 39

    (27) exp -> assignment .
